# ha-findn-led-ble

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  release.yml
config/: configuration.yaml
custom_components/findn_led_ble/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  device.py  device_protocol.py  entity.py  light.py  manifest.json  sensor.py  services.yaml  switch.py
custom_components/findn_led_ble/translations/: en.json
scripts/: develop
