[project]
name = "ha-findn-led-ble"
version = "1.0.1"
requires-python = "==3.14.3"
dependencies = [
    "bluetooth-data-tools",
    "colorlog",
    "homeassistant>=2026.2.3",
]

[dependency-groups]
dev = [
    "prek",
    "ruff",
    "ty",
]

[tool.uv]
package = false

[tool.ty.environment]
python-version = "3.14"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
  "D203",   # no-blank-line-before-class (incompatible with formatter)
  "D212",   # multi-line-summary-first-line (incompatible with formatter)
  "COM812", # incompatible with formatter
  "ISC001", # incompatible with formatter
  "TRY003",
  "EM101",
  "EM102",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25
